# ArchTUI

./: .dockerignore  .gitattributes  .gitignore  .shellcheckrc  ARCHITECTURE.md  CONTRIBUTING.md  Cargo.toml  Dockerfile  LICENSE  Makefile  README.md  ROADMAP.md  SECURITY.md  archinstall-tui  archtui  build.rs  setup.sh
.github/workflows/: build.yml  safety.yml
Source/arch-glow/: arch-glow.plymouth  arch-glow.script
ci/: lint_rules.md
docs/: LLM_CHARACTER.md  SAFETY_MODEL.md  architecture.md  death_pact_tests.md  destructive-ops-policy.md  process-safety.md  roadmap  roe  security.md  sprint0  sprint1  sprint2  sprint3  sprint4  sprint5
scripts/: bootstrap.sh  chroot_config.sh  config_loader.sh  disk_strategies.sh  disk_utils.sh  generate_docs.sh  install.sh  install_wrapper.sh  manifest.schema.json  utils.sh
scripts/desktops/: gnome.sh  hyprland.sh  i3.sh  kde.sh  none.sh  xfce.sh
scripts/manifests/: add_user.json  check_disk_health.json  chroot_config.json  chroot_system.json  configure_firewall.json  configure_locale.json  configure_network.json  configure_ssh.json  detect_os.json  enable_services.json  encrypt_device.json  format_partition.json  generate_fstab.json  install.json  install_aur_helper.json  install_bootloader.json  install_dotfiles.json  manage_groups.json  manage_services.json  manual_partition.json  mount_partitions.json  network_diagnostics.json  pre_mounted.json  rebuild_initramfs.json  reset_password.json  run_as_user.json  security_audit.json  system_info.json  test_network.json  update_mirrors.json  view_install_logs.json  wipe_disk.json
scripts/strategies/: lvm.sh  lvm_luks.sh  manual.sh  pre_mounted.sh  raid.sh  raid_luks.sh  raid_lvm.sh  raid_lvm_luks.sh  simple.sh  simple_luks.sh
scripts/tests/: chroot_config.bats  config_loader.bats  disk_utils.bats  install.bats  run_tests.sh  test_helper.bash  utils.bats
scripts/tools/: add_user.sh  check_disk_health.sh  chroot_system.sh  configure_firewall.sh  configure_locale.sh  configure_network.sh  configure_ssh.sh  detect_os.sh  enable_services.sh  encrypt_device.sh  format_partition.sh  generate_fstab.sh  install_aur_helper.sh  install_bootloader.sh  install_dotfiles.sh  manage_groups.sh  manage_services.sh  manual_partition.sh  mount_partitions.sh  network_diagnostics.sh  rebuild_initramfs.sh  reset_password.sh  run_as_user.sh  security_audit.sh  system_info.sh  wipe_disk.sh  (+3 more)
src/: app.rs  cli.rs  command_executor.rs  config.rs  config_file.rs  confirm_dialog.rs  error.rs  hardware.rs  input.rs  install_state.rs  installer.rs  lib.rs  main.rs  option_help.rs  package_manager.rs  package_utils.rs  process_guard.rs  sanity.rs  script_manifest.rs  script_runner.rs  script_traits.rs  scrolling.rs  theme.rs  types.rs  ui.rs
tests/: README.md  app_state_tests.rs  death_pact_forced_crash.rs  installer_tests.rs  integration_death_pact.rs  integration_tests.rs  property_tests.rs  script_execution_tests.rs
tui_test/: Cargo.toml
tui_test/src/: config.rs  detection.rs  hardware.rs  input.rs  lib.rs  main.rs  package_utils.rs  sanity.rs  script_manifest.rs  script_runner.rs  script_traits.rs
tui_test/src/_new_ui/: app_mock.rs  config.rs  main_mock.rs  scrolling.rs  theme.rs
tui_test/src/_new_ui/components/: confirm_dialog.rs  floating_window.rs  help_overlay.rs  keybindings.rs  mod.rs
tui_test/src/_new_ui/ui/: dialogs.rs  header.rs  mod.rs
tui_test/src/app/: mod.rs  state.rs
tui_test/src/components/: confirm_dialog.rs  file_browser.rs  floating_window.rs  help_overlay.rs  keybindings.rs  mod.rs  nav_bar.rs  pty_terminal.rs
tui_test/src/logic/: postinstall.rs  preinstall.rs
tui_test/src/scripts/: config.rs  disk.rs  encryption.rs  system.rs  user.rs  user_ops.rs
tui_test/src/ui/: descriptions.rs  dialogs.rs  header.rs  installer.rs  loading.rs  menus.rs  mod.rs  screens.rs
(+34 files in other folders)
