[package]
name = "archinstall-tui"
version = "0.1.0"
edition = "2021"

[lib]
name = "archinstall_tui"

[dependencies]
ratatui = "0.29"
crossterm = "0.27"
tokio = { version = "1.0", features = ["full"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
ctrlc = "3.4"
chrono = { version = "0.4", features = ["serde"] }
