[package]
name = "archinstall-tui"
version = "0.1.0"
edition = "2021"

[lib]
name = "archinstall_tui"

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
clap = { version = "4.0", features = ["derive"] }
portable-pty = "0.8"
vt100 = "0.15"
log = "0.4"

[dev-dependencies]
tempfile = "3"
