[package]
name = "archtui"
version = "0.1.0"
edition = "2021"

[lib]
name = "archtui"

[[bin]]
name = "death_pact_test_helper"
path = "src/bin/death_pact_test_helper.rs"

[features]
default = []
# Enable ALPM integration (requires libalpm - Arch Linux only)
alpm = ["dep:alpm", "dep:pacmanconf"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
portable-pty = "0.8"
vt100 = "0.15"
log = "0.4"
env_logger = "0.11"
strum = { version = "0.26", features = ["derive"] }
# Process lifecycle management (Sprint 6)
nix = { version = "0.29", features = ["signal", "process"] }
ctrlc = "3.4"
# Comprehensive signal handling for SIGINT, SIGTERM, SIGHUP
signal-hook = "0.3"
# ALPM (Arch Linux Package Management) - Sprint 3
# Optional: only available on Arch Linux where libalpm is installed
alpm = { version = "5", optional = true }
pacmanconf = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
proptest = "1.4"

# Documentation settings
[package.metadata.docs.rs]
# Document all features
all-features = true
# Build docs for these targets
targets = ["x86_64-unknown-linux-gnu"]

# Release profile optimizations for minimal binary size on the ISO
[profile.release]
# Link-time optimization across all crates
lto = true
# Single codegen unit for maximum optimization
codegen-units = 1
# Strip debug symbols from binary
strip = true
# Optimize for size with good performance
opt-level = "z"
# Abort on panic (smaller binary, no unwinding)
panic = "abort"
