[package]
name = "archtui-dev"
version = "0.1.0"
edition = "2021"

[lib]
name = "archtui"
path = "src/lib.rs"

[[bin]]
name = "archtui-dev"
path = "src/main.rs"

[[bin]]
name = "death_pact_test_helper"
path = "src/bin/death_pact_test_helper.rs"

[features]
default = []
# Enable ALPM integration (requires libalpm - Arch Linux only)
alpm = ["dep:alpm", "dep:pacmanconf"]

[dependencies]
ratatui = "0.29"
crossterm = "0.28"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
anyhow = "1.0"
thiserror = "1.0"
clap = { version = "4.0", features = ["derive"] }
portable-pty = "0.8"
vt100 = "0.15"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter", "fmt"] }
strum = { version = "0.26", features = ["derive"] }
# Process lifecycle management
nix = { version = "0.29", features = ["signal", "process"] }
ctrlc = "3.4"
# Comprehensive signal handling for SIGINT, SIGTERM, SIGHUP
signal-hook = "0.3"
# ALPM (Arch Linux Package Management)
# Optional: only available on Arch Linux where libalpm is installed
alpm = { version = "5", optional = true }
pacmanconf = { version = "3", optional = true }

[dev-dependencies]
tempfile = "3"
proptest = "1.4"

# Release profile optimizations
[profile.release]
lto = true
codegen-units = 1
strip = true
opt-level = "z"
panic = "abort"
